--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "dev:backend": "convex dev",
     "lint": "eslint",
     "db:push": "drizzle-kit push",
     "db:generate": "drizzle-kit generate",
@@ -13,11 +14,15 @@
     "db:migrate": "drizzle-kit migrate"
   },
   "dependencies": {
+    "@clerk/backend": "^2.19.1",
+    "@clerk/clerk-react": "^5.53.4",
     "@clerk/nextjs": "^6.34.1",
+    "@convex-dev/auth": "^0.0.90",
     "@radix-ui/react-slot": "^1.2.3",
     "@t3-oss/env-nextjs": "^0.13.8",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "convex": "^1.28.0",
     "drizzle-kit": "^0.31.6",
     "drizzle-orm": "^0.44.7",
     "lucide-react": "^0.548.0",
@@ -27,6 +32,7 @@
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "sonner": "^2.0.7",
+    "svix": "^1.81.0",
     "tailwind-merge": "^3.3.1",
     "zod": "^4.1.12"
   },
