--- a/package.json
+++ b/package.json
@@ -7,11 +7,7 @@
     "build": "next build",
     "start": "next start",
     "dev:backend": "convex dev",
-    "lint": "eslint",
-    "db:push": "drizzle-kit push",
-    "db:generate": "drizzle-kit generate",
-    "db:studio": "drizzle-kit studio",
-    "db:migrate": "drizzle-kit migrate"
+    "lint": "eslint"
   },
   "dependencies": {
     "@clerk/backend": "^2.19.1",
@@ -23,12 +19,9 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "convex": "^1.28.0",
-    "drizzle-kit": "^0.31.6",
-    "drizzle-orm": "^0.44.7",
     "lucide-react": "^0.548.0",
     "next": "16.0.0",
     "next-themes": "^0.4.6",
-    "pg": "^8.16.3",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "sonner": "^2.0.7",
