--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "sonner": "^2.0.7",
     "svix": "^1.81.0",
     "tailwind-merge": "^3.3.1",
+    "use-sound": "^5.0.0",
     "zod": "^4.1.12"
   },
   "devDependencies": {
